Boss Attacks/Player Health

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1400,9 +1400,54 @@ K2Node_FunctionResult.Outputs=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
+BP_Boss_Rain_C.Tick=True
+BP_Boss_Rain_C.Rendering=True
+BP_Boss_Rain_C.Replication=True
+BP_Boss_Rain_C.Input=True
+BP_Boss_Rain_C.Actor=True
+BP_Boss_Rain_Bullet_C.Tick=True
+BP_Boss_Rain_Bullet_C.Rendering=True
+BP_Boss_Rain_Bullet_C.Replication=True
+BP_Boss_Rain_Bullet_C.Input=True
+BP_Boss_Rain_Bullet_C.Actor=True
+BP_Boss_Laser_C.Tick=True
+BP_Boss_Laser_C.Rendering=True
+BP_Boss_Laser_C.Replication=True
+BP_Boss_Laser_C.Input=True
+BP_Boss_Laser_C.Actor=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Physics=True
+WidgetComponent.Animation=True
+WidgetComponent.Collision=True
+WidgetComponent.Layers=True
+WidgetComponent.Rendering=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Variable=True
+WidgetComponent.Cooking=True
+W_BossHealth_C.Appearance=True
+W_BossHealth_C.Designer=True
+W_BossHealth_C.Input=True
+W_BossHealth_C.Interaction=True
+W_BossHealth_C.Performance=True
+W_BossHealth_C.Layout=True
+W_BossHealth_C.Behavior=True
+W_BossHealth_C.Render Transform=True
+W_BossHealth_C.Clipping=True
+W_BossHealth_C.Navigation=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -2134,28 +2179,31 @@ K2Node_VariableGet=BP_Boss_C.Collision.Collision,
 K2Node_VariableSet=BP_Boss_C.Collision.Collision,
 BP_Boss_Tentacle_C=BP_Boss_C.Collision.Collision,
 Character=BP_Boss_C.Collision.Collision,
+BP_Boss_Rain_C=BP_Boss_C.Collision.Collision,
+BP_Maincharacter_C=BP_Boss_C.Collision.Collision,
+FloatProperty=BP_Boss_C.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Boss
+MRUItem0=/Game/Final/Widget/W_Player_Health
 MRUItem1=/Game/Final/Widget/W_BossHealth
-MRUItem2=/Game/Final/Blueprint/BP_Boss_Tentacle
-MRUItem3=/Game/Final/Blueprint/BP_Bullet
-MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem5=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem6=/Game/Final/Tilesets/Cave3
-MRUItem7=/Game/Final/Tilesets/Cave4
-MRUItem8=/Game/Final/Tilesets/Cave2
-MRUItem9=/Game/Final/Tilesets/Cave5
-MRUItem10=/Game/Final/Tilesets/Cave7
-MRUItem11=/Game/Final/Tilesets/Cave6
-MRUItem12=/Game/Final/Tilesets/Cave1
-MRUItem13=/Game/Final/Tilesets/caveblock_TileSet
-MRUItem14=/Game/Final/Tilesets/cave_TileSet
-MRUItem15=/Game/Final/Tilesets/Trees1
-MRUItem16=/Game/Final/Tilesets/Trees2
-MRUItem17=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet1
-MRUItem18=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet3
-MRUItem19=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet2
+MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem3=/Game/Final/Blueprint/Boss/BP_Boss_Laser
+MRUItem4=/Game/Final/Blueprint/BP_Boss
+MRUItem5=/Game/Final/Blueprint/BP_Boss_Rain_Bullet
+MRUItem6=/Game/Final/Blueprint/BP_Boss_Rain
+MRUItem7=/Game/Final/Blueprint/BP_Boss_Tentacle
+MRUItem8=/Game/Final/Blueprint/BP_Bullet
+MRUItem9=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem10=/Game/Final/Tilesets/Cave3
+MRUItem11=/Game/Final/Tilesets/Cave4
+MRUItem12=/Game/Final/Tilesets/Cave2
+MRUItem13=/Game/Final/Tilesets/Cave5
+MRUItem14=/Game/Final/Tilesets/Cave7
+MRUItem15=/Game/Final/Tilesets/Cave6
+MRUItem16=/Game/Final/Tilesets/Cave1
+MRUItem17=/Game/Final/Tilesets/caveblock_TileSet
+MRUItem18=/Game/Final/Tilesets/cave_TileSet
+MRUItem19=/Game/Final/Tilesets/Trees1
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -2193,6 +2241,12 @@ None=======
 /Game/Final/Tilesets/Cave5.Cave5=1
 /Game/Final/Tilesets/Cave6.Cave6=1
 /Game/Final/Tilesets/Cave7.Cave7=1
+/Game/Final/Widget/W_Player_Health.W_Player_Health=1
+/Game/Final/Widget/W_BossHealth.W_BossHealth=1
+/Game/Final/Blueprint/Boss/BP_Boss_Rain.BP_Boss_Rain=1
+/Game/Final/Blueprint/Boss/BP_Boss_Rain_Bullet.BP_Boss_Rain_Bullet=1
+/Game/Final/Blueprint/Boss/BP_Boss.BP_Boss=1
+/Game/Final/Blueprint/Boss/BP_Boss_Laser.BP_Boss_Laser=1
 
 [DetailPropertyExpansion]
 InputSettings=
@@ -2216,7 +2270,7 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-BP_Maincharacter_C="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+BP_Maincharacter_C=
 REINST_BP_Maincharacter_C_177="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 
 [PlacementMode]
@@ -2247,7 +2301,7 @@ WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -2277,6 +2331,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
