--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=6
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint/Boss
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1447,7 +1447,7 @@ CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -2184,26 +2184,26 @@ BP_Maincharacter_C=BP_Boss_C.Collision.Collision,
 FloatProperty=BP_Boss_C.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Widget/W_Player_Health
-MRUItem1=/Game/Final/Widget/W_BossHealth
-MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem3=/Game/Final/Blueprint/Boss/BP_Boss_Laser
-MRUItem4=/Game/Final/Blueprint/BP_Boss
-MRUItem5=/Game/Final/Blueprint/BP_Boss_Rain_Bullet
-MRUItem6=/Game/Final/Blueprint/BP_Boss_Rain
-MRUItem7=/Game/Final/Blueprint/BP_Boss_Tentacle
-MRUItem8=/Game/Final/Blueprint/BP_Bullet
-MRUItem9=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem10=/Game/Final/Tilesets/Cave3
-MRUItem11=/Game/Final/Tilesets/Cave4
-MRUItem12=/Game/Final/Tilesets/Cave2
-MRUItem13=/Game/Final/Tilesets/Cave5
-MRUItem14=/Game/Final/Tilesets/Cave7
-MRUItem15=/Game/Final/Tilesets/Cave6
-MRUItem16=/Game/Final/Tilesets/Cave1
-MRUItem17=/Game/Final/Tilesets/caveblock_TileSet
-MRUItem18=/Game/Final/Tilesets/cave_TileSet
-MRUItem19=/Game/Final/Tilesets/Trees1
+MRUItem0=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem1=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem2=/Game/Final/Blueprint/Boss/BP_Boss_Rain_Bullet
+MRUItem3=/Game/Final/Blueprint/Boss/BP_Boss_Rain
+MRUItem4=/Game/Final/Widget/W_Player_Health
+MRUItem5=/Game/Final/Widget/W_BossHealth
+MRUItem6=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem7=/Game/Final/Blueprint/Boss/BP_Boss_Laser
+MRUItem8=/Game/Final/Blueprint/BP_Boss
+MRUItem9=/Game/Final/Blueprint/BP_Boss_Rain_Bullet
+MRUItem10=/Game/Final/Blueprint/BP_Boss_Rain
+MRUItem11=/Game/Final/Blueprint/BP_Boss_Tentacle
+MRUItem12=/Game/Final/Blueprint/BP_Bullet
+MRUItem13=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem14=/Game/Final/Tilesets/Cave3
+MRUItem15=/Game/Final/Tilesets/Cave4
+MRUItem16=/Game/Final/Tilesets/Cave2
+MRUItem17=/Game/Final/Tilesets/Cave5
+MRUItem18=/Game/Final/Tilesets/Cave7
+MRUItem19=/Game/Final/Tilesets/Cave6
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -2247,9 +2247,10 @@ None=======
 /Game/Final/Blueprint/Boss/BP_Boss_Rain_Bullet.BP_Boss_Rain_Bullet=1
 /Game/Final/Blueprint/Boss/BP_Boss.BP_Boss=1
 /Game/Final/Blueprint/Boss/BP_Boss_Laser.BP_Boss_Laser=1
+/Game/Final/Blueprint/BP_Enemy_Bullet.BP_Enemy_Bullet=1
 
 [DetailPropertyExpansion]
-InputSettings=
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
 Object=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
