--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -153,6 +153,22 @@ PaperTileMapComponent.Rendering=True
 PaperTileMapComponent.Tags=True
 PaperTileMapComponent.Activation=True
 PaperTileMapComponent.Cooking=True
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Cooking=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -177,7 +193,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerB
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
+GenericImport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/tentacleenemy.PNG
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -809,5 +825,8 @@ Voice.TimeStamp=2018.10.02-23.34.51
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.10.02-23.34.45
 MovieSceneCapture.LastCompileMethod=Unknown
+
+[PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 
