--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Trees
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -169,6 +169,26 @@ Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Input=True
 Actor.Actor=True
+BP_SavePoint_C.TransformCommon=True
+BP_SavePoint_C.Rendering=True
+BP_SavePoint_C.Input=True
+BP_SavePoint_C.Actor=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperExtractSpritesSettings.Settings=True
+PaperExtractSpritesSettings.Naming=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -828,5 +848,11 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+
+[AssetEditorToolkitTabLocation]
+/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
 
 
