--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,10 +101,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/Final/Levels/TestingArea
+MRUItem1=/Game/Final/Levels/MainGame
+MRUItem2=/Game/Final/Levels/2DSideScrollerExampleMap
+MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Trees
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -122,9 +125,11 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -189,6 +194,153 @@ PaperSprite.Sprite=True
 PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
+BP_Following_Boss_C.TransformCommon=True
+BP_Following_Boss_C.Sprite=True
+BP_Following_Boss_C.Physics=True
+BP_Following_Boss_C.Collision=True
+BP_Following_Boss_C.Lighting=True
+BP_Following_Boss_C.Rendering=True
+BP_Following_Boss_C.Tags=True
+BP_Following_Boss_C.Activation=True
+BP_Following_Boss_C.Cooking=True
+BP_Following_Boss_C.Character=True
+BP_Following_Boss_C.Character Movement: Jumping / Falling=True
+BP_Following_Boss_C.Character Movement (General Settings)=True
+BP_Following_Boss_C.Character Movement: Walking=True
+BP_Following_Boss_C.Character Movement: Swimming=True
+BP_Following_Boss_C.Character Movement: Flying=True
+BP_Following_Boss_C.Character Movement: Custom Movement=True
+BP_Following_Boss_C.Character Movement (Rotation Settings)=True
+BP_Following_Boss_C.Character Movement: Physics Interaction=True
+BP_Following_Boss_C.Character Movement (Networking)=True
+BP_Following_Boss_C.Character Movement=True
+BP_Following_Boss_C.Character Movement: Avoidance=True
+BP_Following_Boss_C.Character Movement: NavMesh Movement=True
+BP_Following_Boss_C.RootMotion=True
+BP_Following_Boss_C.NavMovement=True
+BP_Following_Boss_C.Velocity=True
+BP_Following_Boss_C.PlanarMovement=True
+BP_Following_Boss_C.MovementComponent=True
+BP_Following_Boss_C.Shape=True
+BP_Following_Boss_C.Navigation=True
+BP_Following_Boss_C.Camera=True
+BP_Following_Boss_C.Pawn=True
+BP_Following_Boss_C.Input=True
+BP_Following_Boss_C.Actor=True
+BP_Following_Boss_C.Materials=True
+BP_Boss_WP1_C.Default=True
+BP_Boss_WP1_C.Tick=True
+BP_Boss_WP1_C.Character=True
+BP_Boss_WP1_C.Camera=True
+BP_Boss_WP1_C.Pawn=True
+BP_Boss_WP1_C.Rendering=True
+BP_Boss_WP1_C.Replication=True
+BP_Boss_WP1_C.Input=True
+BP_Boss_WP1_C.Actor=True
+BP_Boss_WP1_C.Variable=True
+BP_Boss_WP1_C.TransformCommon=True
+BP_Boss_WP1_C.Sockets=True
+BP_Boss_WP1_C.Sprite=True
+BP_Boss_WP1_C.Materials=True
+BP_Boss_WP1_C.Physics=True
+BP_Boss_WP1_C.Collision=True
+BP_Boss_WP1_C.Lighting=True
+BP_Boss_WP1_C.Tags=True
+BP_Boss_WP1_C.ComponentReplication=True
+BP_Boss_WP1_C.Activation=True
+BP_Boss_WP1_C.Cooking=True
+BP_Boss_WP1_C.Events=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+BP_Boss_WP1_C.Shape=True
+BP_Boss_WP1_C.Navigation=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+BP_Boss_C.Default=True
+BP_Boss_C.Tick=True
+BP_Boss_C.Character=True
+BP_Boss_C.Camera=True
+BP_Boss_C.Pawn=True
+BP_Boss_C.Rendering=True
+BP_Boss_C.Replication=True
+BP_Boss_C.Input=True
+BP_Boss_C.Actor=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+ObjectProperty.Variable=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+BP_Boss_WP2_C.Default=True
+BP_Boss_WP2_C.Tick=True
+BP_Boss_WP2_C.Character=True
+BP_Boss_WP2_C.Camera=True
+BP_Boss_WP2_C.Pawn=True
+BP_Boss_WP2_C.Rendering=True
+BP_Boss_WP2_C.Replication=True
+BP_Boss_WP2_C.Input=True
+BP_Boss_WP2_C.Actor=True
+BP_Boss_WP3_C.Default=True
+BP_Boss_WP3_C.Tick=True
+BP_Boss_WP3_C.Character=True
+BP_Boss_WP3_C.Camera=True
+BP_Boss_WP3_C.Pawn=True
+BP_Boss_WP3_C.Rendering=True
+BP_Boss_WP3_C.Replication=True
+BP_Boss_WP3_C.Input=True
+BP_Boss_WP3_C.Actor=True
+BP_Boss_WP4_C.Default=True
+BP_Boss_WP4_C.Tick=True
+BP_Boss_WP4_C.Character=True
+BP_Boss_WP4_C.Camera=True
+BP_Boss_WP4_C.Pawn=True
+BP_Boss_WP4_C.Rendering=True
+BP_Boss_WP4_C.Replication=True
+BP_Boss_WP4_C.Input=True
+BP_Boss_WP4_C.Actor=True
+BP_Bullet_C.Tick=True
+BP_Bullet_C.Rendering=True
+BP_Bullet_C.Replication=True
+BP_Bullet_C.Input=True
+BP_Bullet_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -209,7 +361,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerBP/Maps
+UNR=E:/Github/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -501,8 +653,8 @@ GameplayTagsEditor.TimeStamp=2018.10.02-23.41.05
 GameplayTagsEditor.LastCompileMethod=Unknown
 MagicLeapAudio.TimeStamp=2018.10.02-23.42.51
 MagicLeapAudio.LastCompileMethod=Unknown
-SubstanceCore.TimeStamp=2018.10.03-10.37.49
-SubstanceCore.LastCompileMethod=Unknown
+SubstanceCore.TimeStamp=2018.11.08-04.18.36
+SubstanceCore.LastCompileMethod=External
 TcpMessaging.TimeStamp=2018.10.02-23.43.00
 TcpMessaging.LastCompileMethod=Unknown
 UdpMessaging.TimeStamp=2018.10.02-23.43.01
@@ -621,12 +773,12 @@ ProceduralMeshComponentEditor.TimeStamp=2018.10.02-23.43.49
 ProceduralMeshComponentEditor.LastCompileMethod=Unknown
 SteamVRController.TimeStamp=2018.10.02-23.43.53
 SteamVRController.LastCompileMethod=Unknown
-SubstanceEditor.TimeStamp=2018.10.03-10.37.50
-SubstanceEditor.LastCompileMethod=Unknown
-SubstanceSource.TimeStamp=2018.10.03-10.37.51
-SubstanceSource.LastCompileMethod=Unknown
-SubstanceLiveLink.TimeStamp=2018.10.03-10.37.50
-SubstanceLiveLink.LastCompileMethod=Unknown
+SubstanceEditor.TimeStamp=2018.11.08-04.18.37
+SubstanceEditor.LastCompileMethod=External
+SubstanceSource.TimeStamp=2018.11.08-04.18.37
+SubstanceSource.LastCompileMethod=External
+SubstanceLiveLink.TimeStamp=2018.11.08-04.18.37
+SubstanceLiveLink.LastCompileMethod=External
 TaskGraph.TimeStamp=2018.10.02-23.34.50
 TaskGraph.LastCompileMethod=Unknown
 ProfilerService.TimeStamp=2018.10.02-23.34.47
@@ -845,14 +997,63 @@ Voice.TimeStamp=2018.10.02-23.34.51
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.10.02-23.34.45
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.09.28-03.44.54
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.09.28-03.44.49
+BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.09.28-03.44.59
+SequencerWidgets.LastCompileMethod=Unknown
 
 [PlacementMode]
 RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem0=/Game/Final/Blueprint/BP_Bullet
+MRUItem1=/Game/Final/Widget/W_BossHealth
+MRUItem2=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
+MRUItem3=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
+MRUItem4=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
+MRUItem5=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem6=/Game/Final/Enumerations/BossWeakPoint
+MRUItem7=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
+MRUItem8=/Game/Final/Levels/TestingArea
+MRUItem9=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
+/Game/Final/Enumerations/BossWeakPoint.BossWeakPoint=1
+/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1.BP_Boss_WP1=1
+/Game/Final/Blueprint/Boss/BP_Boss.BP_Boss=1
+/Game/Final/Widget/W_BossHealth.W_BossHealth=1
+/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2.BP_Boss_WP2=1
+/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3.BP_Boss_WP3=1
+/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4.BP_Boss_WP4=1
+/Game/Final/Blueprint/BP_Bullet.BP_Bullet=1
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[PluginBrowser]
+InstalledPlugins=Substance
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=True
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 
