--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Tilesets
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -200,6 +200,29 @@ Texture2D.Texture=True
 Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.Color Grading=True
+CameraActor.Film=True
+CameraActor.Mobile Tonemapper=True
+CameraActor.Lens=True
+CameraActor.Rendering Features=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Actor=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Rendering=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -224,7 +247,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerB
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/tentacleenemy.PNG
+GenericImport=../../../../../../Finals/Opto/tentacle_ground1.png
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -860,17 +883,42 @@ TextureEditor.TimeStamp=2018.10.02-23.34.50
 TextureEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0.tentacle1_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/box1_Sprite_0.box1_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/box_blue_Sprite_0.box_blue_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/box_green_Sprite_0.box_green_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/box_red_Sprite_0.box_red_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0.box_yellow_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_4.SpriteSheet_Trees_Sprite_4;
+RecentlyPlaced=/Game/Final/Sprites/Trees/tree_stump_small_Sprite.tree_stump_small_Sprite;
+RecentlyPlaced=/Game/Final/Sprites/Trees/tree_stump3_Sprite.tree_stump3_Sprite;
+RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Trees/tree2_Sprite.tree2_Sprite;
+RecentlyPlaced=/Game/Final/Sprites/Trees/tree1_Sprite.tree1_Sprite;
+RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
+RecentlyPlaced=/Game/Final/Sprites/Trees/Tree_stump_Sprite.Tree_stump_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Tilesets/SpriteSheet_Trees
-MRUItem1=/Game/Final/Tilesets/SpriteSheet_Trees2
-MRUItem2=/Game/Final/Tilesets/Jungle3
-MRUItem3=/Game/Final/Tilesets/Jungle4
-MRUItem4=/Game/Final/Tilesets/Jungle1
-MRUItem5=/Game/Final/Tilesets/Jungle11
-MRUItem6=/Game/Final/Tilesets/Jungle10
-MRUItem7=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem0=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem1=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0
+MRUItem2=/Game/Final/Sprites/Platforms/box_red_Sprite_0
+MRUItem3=/Game/Final/Sprites/Platforms/box_green_Sprite_0
+MRUItem4=/Game/Final/Sprites/Platforms/box_blue_Sprite_0
+MRUItem5=/Game/Final/Sprites/Platforms/box1_Sprite_0
+MRUItem6=/Game/Final/Sprites/Trees/tree1_Sprite
+MRUItem7=/Game/Final/Sprites/Trees/Tree_stump_Sprite
+MRUItem8=/Game/Final/Tilesets/SpriteSheet_Trees
+MRUItem9=/Game/Final/Tilesets/SpriteSheet_Trees2
+MRUItem10=/Game/Final/Tilesets/Jungle3
+MRUItem11=/Game/Final/Tilesets/Jungle4
+MRUItem12=/Game/Final/Tilesets/Jungle1
+MRUItem13=/Game/Final/Tilesets/Jungle11
+MRUItem14=/Game/Final/Tilesets/Jungle10
+MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -881,5 +929,16 @@ MRUItem7=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 /Game/Final/Tilesets/Jungle3.Jungle3=1
 /Game/Final/Tilesets/SpriteSheet_Trees.SpriteSheet_Trees=1
 /Game/Final/Tilesets/SpriteSheet_Trees2.SpriteSheet_Trees2=1
+/Game/Final/Sprites/Trees/Tree_stump_Sprite.Tree_stump_Sprite=1
+/Game/Final/Sprites/Trees/tree1_Sprite.tree1_Sprite=1
+/Game/Final/Sprites/Platforms/box1_Sprite_0.box1_Sprite_0=1
+/Game/Final/Sprites/Platforms/box_blue_Sprite_0.box_blue_Sprite_0=1
+/Game/Final/Sprites/Platforms/box_green_Sprite_0.box_green_Sprite_0=1
+/Game/Final/Sprites/Platforms/box_red_Sprite_0.box_red_Sprite_0=1
+/Game/Final/Sprites/Platforms/box_yellow_Sprite_0.box_yellow_Sprite_0=1
+
+[DetailPropertyExpansion]
+PaperSprite="\"Object.Collision.CollisionGeometry\" "
+Object=
 
 
