--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -122,6 +122,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -223,6 +225,45 @@ TriggerBox.Tags=True
 TriggerBox.Cooking=True
 TriggerBox.Input=True
 TriggerBox.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_Maincharacter_C.Default=True
+BP_Maincharacter_C.Tick=True
+BP_Maincharacter_C.Character=True
+BP_Maincharacter_C.Camera=True
+BP_Maincharacter_C.Pawn=True
+BP_Maincharacter_C.Rendering=True
+BP_Maincharacter_C.Replication=True
+BP_Maincharacter_C.Input=True
+BP_Maincharacter_C.Actor=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Color Grading=True
+CameraComponent.Film=True
+CameraComponent.Mobile Tonemapper=True
+CameraComponent.Lens=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -881,8 +922,14 @@ MovieSceneCapture.TimeStamp=2018.10.02-23.34.45
 MovieSceneCapture.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2018.10.02-23.34.50
 TextureEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.10.02-23.34.43
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.10.02-23.34.39
+BlueprintGraph.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0;
@@ -898,27 +945,27 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/tree_stump3_Sprite.tree_stump3_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Trees/tree2_Sprite.tree2_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Trees/tree1_Sprite.tree1_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Trees/Tree_stump_Sprite.Tree_stump_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem1=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0
-MRUItem2=/Game/Final/Sprites/Platforms/box_red_Sprite_0
-MRUItem3=/Game/Final/Sprites/Platforms/box_green_Sprite_0
-MRUItem4=/Game/Final/Sprites/Platforms/box_blue_Sprite_0
-MRUItem5=/Game/Final/Sprites/Platforms/box1_Sprite_0
-MRUItem6=/Game/Final/Sprites/Trees/tree1_Sprite
-MRUItem7=/Game/Final/Sprites/Trees/Tree_stump_Sprite
-MRUItem8=/Game/Final/Tilesets/SpriteSheet_Trees
-MRUItem9=/Game/Final/Tilesets/SpriteSheet_Trees2
-MRUItem10=/Game/Final/Tilesets/Jungle3
-MRUItem11=/Game/Final/Tilesets/Jungle4
-MRUItem12=/Game/Final/Tilesets/Jungle1
-MRUItem13=/Game/Final/Tilesets/Jungle11
-MRUItem14=/Game/Final/Tilesets/Jungle10
-MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem1=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem2=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0
+MRUItem3=/Game/Final/Sprites/Platforms/box_red_Sprite_0
+MRUItem4=/Game/Final/Sprites/Platforms/box_green_Sprite_0
+MRUItem5=/Game/Final/Sprites/Platforms/box_blue_Sprite_0
+MRUItem6=/Game/Final/Sprites/Platforms/box1_Sprite_0
+MRUItem7=/Game/Final/Sprites/Trees/tree1_Sprite
+MRUItem8=/Game/Final/Sprites/Trees/Tree_stump_Sprite
+MRUItem9=/Game/Final/Tilesets/SpriteSheet_Trees
+MRUItem10=/Game/Final/Tilesets/SpriteSheet_Trees2
+MRUItem11=/Game/Final/Tilesets/Jungle3
+MRUItem12=/Game/Final/Tilesets/Jungle4
+MRUItem13=/Game/Final/Tilesets/Jungle1
+MRUItem14=/Game/Final/Tilesets/Jungle11
+MRUItem15=/Game/Final/Tilesets/Jungle10
+MRUItem16=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -936,9 +983,13 @@ MRUItem15=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 /Game/Final/Sprites/Platforms/box_green_Sprite_0.box_green_Sprite_0=1
 /Game/Final/Sprites/Platforms/box_red_Sprite_0.box_red_Sprite_0=1
 /Game/Final/Sprites/Platforms/box_yellow_Sprite_0.box_yellow_Sprite_0=1
+/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
 Object=
+
+[DetailCustomWidgetExpansion]
+CameraComponent=CameraComponent.Lens.Lens
 
 
