--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedLaunchName=ALIENMOMO
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=2235,Y=163)
+NewWindowPosition=(X=315,Y=163)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -135,8 +135,6 @@ LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Final/Levels/TestingArea.TestingArea:PersistentLevel.TestingArea
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -891,6 +889,252 @@ BlockingVolume.Tags=True
 BlockingVolume.Cooking=True
 BlockingVolume.BrushSettings=True
 BlockingVolume.Actor=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Filtering=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Audio=True
+HTML5TargetSettings.Canvas=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+MagicLeapSDKSettings.SDK Config=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+MagicLeapEmulatorSettings.MagicLeapEmulator=True
+MagicLeapSettings.General=True
+OculusHMDRuntimeSettings.SplashScreen=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SubstanceSettings.Hardware Budget=True
+SubstanceSettings.Cooking=True
+SubstanceSettings.Optimization=True
+SubstanceSettings.Substance Import Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+BP_Flying_Enemy_C.Default=True
+BP_Flying_Enemy_C.Tick=True
+BP_Flying_Enemy_C.Character=True
+BP_Flying_Enemy_C.Camera=True
+BP_Flying_Enemy_C.Pawn=True
+BP_Flying_Enemy_C.Rendering=True
+BP_Flying_Enemy_C.Replication=True
+BP_Flying_Enemy_C.Input=True
+BP_Flying_Enemy_C.Actor=True
+K2Node_Timeline.GraphNodeDetail=True
+EdGraph.Graph=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+BP_Flying_Enemy_C.TransformCommon=True
+BP_Flying_Enemy_C.Sprite=True
+BP_Flying_Enemy_C.Physics=True
+BP_Flying_Enemy_C.Collision=True
+BP_Flying_Enemy_C.Lighting=True
+BP_Flying_Enemy_C.Tags=True
+BP_Flying_Enemy_C.Activation=True
+BP_Flying_Enemy_C.Cooking=True
+BP_Flying_Enemy_C.Character Movement: Jumping / Falling=True
+BP_Flying_Enemy_C.Character Movement (General Settings)=True
+BP_Flying_Enemy_C.Character Movement: Walking=True
+BP_Flying_Enemy_C.Character Movement: Swimming=True
+BP_Flying_Enemy_C.Character Movement: Flying=True
+BP_Flying_Enemy_C.Character Movement: Custom Movement=True
+BP_Flying_Enemy_C.Character Movement (Rotation Settings)=True
+BP_Flying_Enemy_C.Character Movement: Physics Interaction=True
+BP_Flying_Enemy_C.Character Movement (Networking)=True
+BP_Flying_Enemy_C.Character Movement=True
+BP_Flying_Enemy_C.Character Movement: Avoidance=True
+BP_Flying_Enemy_C.Character Movement: NavMesh Movement=True
+BP_Flying_Enemy_C.RootMotion=True
+BP_Flying_Enemy_C.NavMovement=True
+BP_Flying_Enemy_C.Velocity=True
+BP_Flying_Enemy_C.PlanarMovement=True
+BP_Flying_Enemy_C.MovementComponent=True
+BP_Flying_Enemy_C.Shape=True
+BP_Flying_Enemy_C.Navigation=True
+BP_Flying_Enemy_C.Materials=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1553,8 +1797,11 @@ BlueprintGraph.TimeStamp=2018.09.28-03.44.49
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.09.28-03.44.59
 SequencerWidgets.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.09.28-03.44.54
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4.BP_Boss_WP4;
 RecentlyPlaced=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3.BP_Boss_WP3;
@@ -1564,19 +1811,20 @@ RecentlyPlaced=/Game/Final/Blueprint/Boss/BP_Boss.BP_Boss;
 RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem1=/Game/Final/Widget/W_Player_Health
-MRUItem2=/Game/Final/Blueprint/BP_Bullet
-MRUItem3=/Game/Final/Blueprint/Boss/BP_Boss
-MRUItem4=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
-MRUItem5=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
-MRUItem6=/Game/Final/Widget/W_BossHealth
-MRUItem7=/Game/Final/Levels/TestingArea
-MRUItem8=/Game/Final/Levels/MainGame
-MRUItem9=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
-MRUItem10=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
-MRUItem11=/Game/Final/Enumerations/BossWeakPoint
-MRUItem12=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem0=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem1=/Game/Final/Levels/TestingArea
+MRUItem2=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem3=/Game/Final/Widget/W_Player_Health
+MRUItem4=/Game/Final/Blueprint/BP_Bullet
+MRUItem5=/Game/Final/Blueprint/Boss/BP_Boss
+MRUItem6=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP3
+MRUItem7=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP1
+MRUItem8=/Game/Final/Widget/W_BossHealth
+MRUItem9=/Game/Final/Levels/MainGame
+MRUItem10=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4
+MRUItem11=/Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP2
+MRUItem12=/Game/Final/Enumerations/BossWeakPoint
+MRUItem13=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -1589,6 +1837,7 @@ MRUItem12=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 /Game/Final/Blueprint/Boss/WeakPoint/BP_Boss_WP4.BP_Boss_WP4=1
 /Game/Final/Blueprint/BP_Bullet.BP_Bullet=1
 /Game/Final/Widget/W_Player_Health.W_Player_Health=1
+/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy=1
 
 [WidgetTemplatesExpanded]
 Extra=False
