--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Trees
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -288,7 +288,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerB
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=../../../../../../Finals/Opto/tentacle_ground1.png
+GenericImport=../../../../../../Finals/Opto/islandtree2.png
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -928,6 +928,19 @@ BlueprintGraph.TimeStamp=2018.10.02-23.34.39
 BlueprintGraph.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/Trees/tree1_Sprite.tree1_Sprite;
+RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0.islandtrees3_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Trees/islandtrees3_Sprite_1.islandtrees3_Sprite_1;
+RecentlyPlaced=/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0.isnlandstrees_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Trees/islandtree2_Sprite_0.islandtree2_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/health_container.health_container;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/up_down_platform.up_down_platform;
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0.tentacle_ground2_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0.tentacle2_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_1.IMG-0465_Sprite_1;
+RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_0.IMG-0465_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Platforms/bomb_container.bomb_container;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
@@ -935,37 +948,26 @@ RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentacle
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0.tentacle1_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/box1_Sprite_0.box1_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/box_blue_Sprite_0.box_blue_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/box_green_Sprite_0.box_green_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/box_red_Sprite_0.box_red_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0.box_yellow_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_4.SpriteSheet_Trees_Sprite_4;
-RecentlyPlaced=/Game/Final/Sprites/Trees/tree_stump_small_Sprite.tree_stump_small_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/Trees/tree_stump3_Sprite.tree_stump3_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Trees/tree2_Sprite.tree2_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/Trees/tree1_Sprite.tree1_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/Trees/Tree_stump_Sprite.Tree_stump_Sprite;
-RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem1=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem2=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0
-MRUItem3=/Game/Final/Sprites/Platforms/box_red_Sprite_0
-MRUItem4=/Game/Final/Sprites/Platforms/box_green_Sprite_0
-MRUItem5=/Game/Final/Sprites/Platforms/box_blue_Sprite_0
-MRUItem6=/Game/Final/Sprites/Platforms/box1_Sprite_0
-MRUItem7=/Game/Final/Sprites/Trees/tree1_Sprite
-MRUItem8=/Game/Final/Sprites/Trees/Tree_stump_Sprite
-MRUItem9=/Game/Final/Tilesets/SpriteSheet_Trees
-MRUItem10=/Game/Final/Tilesets/SpriteSheet_Trees2
-MRUItem11=/Game/Final/Tilesets/Jungle3
-MRUItem12=/Game/Final/Tilesets/Jungle4
-MRUItem13=/Game/Final/Tilesets/Jungle1
-MRUItem14=/Game/Final/Tilesets/Jungle11
-MRUItem15=/Game/Final/Tilesets/Jungle10
-MRUItem16=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem0=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
+MRUItem1=/Game/Final/Sprites/Fruits/IMG-0477_Sprite_0
+MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem3=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem4=/Game/Final/Sprites/Platforms/box_yellow_Sprite_0
+MRUItem5=/Game/Final/Sprites/Platforms/box_red_Sprite_0
+MRUItem6=/Game/Final/Sprites/Platforms/box_green_Sprite_0
+MRUItem7=/Game/Final/Sprites/Platforms/box_blue_Sprite_0
+MRUItem8=/Game/Final/Sprites/Platforms/box1_Sprite_0
+MRUItem9=/Game/Final/Sprites/Trees/tree1_Sprite
+MRUItem10=/Game/Final/Sprites/Trees/Tree_stump_Sprite
+MRUItem11=/Game/Final/Tilesets/SpriteSheet_Trees
+MRUItem12=/Game/Final/Tilesets/SpriteSheet_Trees2
+MRUItem13=/Game/Final/Tilesets/Jungle3
+MRUItem14=/Game/Final/Tilesets/Jungle4
+MRUItem15=/Game/Final/Tilesets/Jungle1
+MRUItem16=/Game/Final/Tilesets/Jungle11
+MRUItem17=/Game/Final/Tilesets/Jungle10
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -987,7 +989,7 @@ MRUItem16=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object=
+Object="\"Object.Collision.CollisionGeometry\" "
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.Lens.Lens
