--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,7 +81,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
-CameraSpeed=8
 bInvertMouseLookYAxis=False
 bInvertOrbitYAxis=False
 bInvertMiddleMousePan=False
@@ -104,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Trees
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Fruits
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -928,6 +927,9 @@ BlueprintGraph.TimeStamp=2018.10.02-23.34.39
 BlueprintGraph.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_power.fruit_power;
+RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_health.fruit_health;
+RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_dash.fruit_dash;
 RecentlyPlaced=/Game/Final/Sprites/Trees/tree1_Sprite.tree1_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0.islandtrees3_Sprite_0;
@@ -945,9 +947,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/Final/Sprites/background_Sprite.background_Sprite;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchsmall_Sprite_0.tentaclearchsmall_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0.tentacle1_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/box1_Sprite_0.box1_Sprite_0;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
