--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1155,7 +1155,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Github/Project-Final/Finals/Content/Final/Levels
+UNR=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -1793,8 +1793,8 @@ MovieSceneCapture.TimeStamp=2018.10.02-23.34.45
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.09.28-03.44.54
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2018.09.28-03.44.49
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.10.01-03.52.42
+BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2018.09.28-03.44.59
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.09.28-03.44.54
@@ -1811,9 +1811,9 @@ RecentlyPlaced=/Game/Final/Blueprint/Boss/BP_Boss.BP_Boss;
 RecentlyPlaced=/Game/Final/Sprites/tentacleenemy_Sprite.tentacleenemy_Sprite;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem1=/Game/Final/Levels/TestingArea
-MRUItem2=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem1=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem2=/Game/Final/Levels/TestingArea
 MRUItem3=/Game/Final/Widget/W_Player_Health
 MRUItem4=/Game/Final/Blueprint/BP_Bullet
 MRUItem5=/Game/Final/Blueprint/Boss/BP_Boss
@@ -1838,6 +1838,7 @@ MRUItem13=/Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0
 /Game/Final/Blueprint/BP_Bullet.BP_Bullet=1
 /Game/Final/Widget/W_Player_Health.W_Player_Health=1
 /Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy=1
+/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
 
 [WidgetTemplatesExpanded]
 Extra=False
